--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,5 +29,5 @@ jobs:
         git clone https://github.com/w3c/vc-test-suite --depth 1
         cd vc-test-suite
         npm i
-        cp ../ssi/src/bin/ssi-vc-test/config.json .
+        cp ../ssi/vc-test/config.json .
         npm test
