Implement did:key resolution for Ed25519

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ derive_builder = "0.9"
 base64 = "0.12"
 jsonwebtoken = { path = "jsonwebtoken" }
 ring = "0.16"
+multibase = "0.8"
 
 [workspace]
 members = [
