Support arbitrary JSON-LD for LD-Proofs
- Use json-ld crate for @context expansion
  - Use Rust nightly
- Implement JSON-LD to RDF deserialization
  - Test with toRdf test cases from JSON-LD Test Suite
    - Skip tests for Generalized RDF or JSON-LD 1.0
    - Skip 10 non-passing tests
- Implement and test RDF Dataset normalization (URDNA2015)
- Add git submodules for json-ld test suites
- Bundle common JSON-LD contexts, using lazy_static
- Add signed test fixtures and example programs to build them

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,6 +15,8 @@ jobs:
     steps:
     - name: Checkout SSI Library
       uses: actions/checkout@v2
+      with:
+        submodules: true
 
     - name: Cache Cargo registry and build artifacts
       uses: actions/cache@v2
@@ -26,6 +28,13 @@ jobs:
         key: ${{ runner.os }}-cargo-${{ hashFiles('Cargo.toml', '**.rs') }}
         restore-keys: |
           ${{ runner.os }}-cargo-
+
+    - name: Install Rust nightly
+      uses: actions-rs/toolchain@v1
+      with:
+        toolchain: nightly
+        profile: minimal
+        default: true
 
     - name: Build
       run: cargo build --verbose --workspace
