--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ edition = "2018"
 chrono = { version = "0.4", features = ["serde"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+serde_jcs = "0.1"
 pest = "2.1"
 pest_derive = "2.1"
 derive_builder = "0.9"
@@ -20,6 +21,12 @@ simple_asn1 = "0.5"
 num-bigint = "0.3"
 async-std = { version = "1.5", features = ["attributes"] }
 async-trait = "0.1"
+json-ld = { git = "https://github.com/timothee-haudebourg/json-ld", rev = "448791ead1d4c1a78e4434e91d6f7e77b455b4f1" }
+json = "0.12"
+futures = "0.3"
+iref = "1.1"
+lazy_static = "1.4"
+permute = "0.1"
 
 [workspace]
 members = [
@@ -27,3 +34,7 @@ members = [
   "did-tezos",
   "vc-test",
 ]
+
+[dev-dependencies]
+uuid = { version = "0.8", features = ["v4", "serde"] }
+difference = "2.0"
