Make crypto libraries optional with features
- Add alternatives libraries: rsa, ed25519-compact, sha2
- Leave ring as default
- Put hashing in separate file

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -42,6 +42,9 @@ jobs:
     - name: Test
       run: cargo test --verbose --workspace
 
+    - name: Test with alternative crypto libraries
+      run: cargo test --no-default-features --features rsa,ed25519-compact,sha2
+
     - name: Checkout vc-test-suite
       uses: actions/checkout@v2
       with:
