--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,7 +18,8 @@ derive_builder = "0.9"
 base64 = "0.12"
 ring = { version = "0.16", optional = true }
 rsa = { version = "0.3", optional = true }
-ed25519-compact = { version = "0.1", optional = true }
+ed25519-dalek = { version = "1", optional = true }
+rand = { version = "0.7", optional = true }
 multibase = "0.8"
 simple_asn1 = "0.5"
 num-bigint = "0.3"
