--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -45,6 +45,9 @@ jobs:
     - name: Test with alternative crypto libraries
       run: cargo test --no-default-features --features rsa,ed25519-dalek,sha2,rand
 
+    - name: Test DID Resolution HTTP(S) Binding
+      run: cargo test --features http-did
+
     - name: Checkout vc-test-suite
       uses: actions/checkout@v2
       with:
