--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2018"
 
 [features]
 default = ["ring"]
+http-did = ["hyper", "hyper-tls", "http", "serde_urlencoded", "percent-encoding", "tokio"]
 
 [dependencies]
 chrono = { version = "0.4", features = ["serde"] }
@@ -32,10 +33,15 @@ iref = "1.1"
 lazy_static = "1.4"
 combination = "0.1"
 sha2 = { version = "0.9", optional = true }
+hyper = { version = "0.14", optional = true, features = ["server", "client", "http1", "stream"] }
+hyper-tls = { version = "0.5", optional = true }
+http = { version = "0.2", optional = true }
+serde_urlencoded = { version = "0.7", optional = true }
+percent-encoding = { version = "2.1", optional = true }
+tokio = { version = "1.0", optional = true, features = ["macros"] }
 
 [workspace]
 members = [
-  "did-resolve",
   "did-tezos",
   "vc-test",
 ]
