--- a/did-tezos/Cargo.toml
+++ b/did-tezos/Cargo.toml
@@ -8,12 +8,10 @@ edition = "2018"
 
 [dependencies]
 ssi = { path = "../" }
-ssi-did-resolve = { path = "../did-resolve" }
 chrono = { version = "0.4", features = ["serde"] }
-tokio = { version = "0.2", features = ["macros", "stream"] }
+tokio = { version = "1.0", features = ["macros", "rt"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
-hyper = "0.13"
 async-trait = "0.1"
 anyhow = "1.0.34"
 thiserror = "1.0"
