--- a/Cargo.toml
+++ b/Cargo.toml
@@ -42,7 +42,7 @@ tokio = { version = "1.0", optional = true, features = ["macros"] }
 
 [workspace]
 members = [
-  #"did-tezos",
+  "did-tezos",
   "did-key",
   "did-web",
   "vc-test",
