--- a/did-tezos/Cargo.toml
+++ b/did-tezos/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-ssi = { path = "../" }
+ssi = { path = "../", default-features = false }
 chrono = { version = "0.4", features = ["serde"] }
 tokio = { version = "1.0", features = ["macros", "rt"] }
 serde = { version = "1.0", features = ["derive"] }
