--- a/did-web/Cargo.toml
+++ b/did-web/Cargo.toml
@@ -5,7 +5,7 @@ authors = ["Charles E. Lehner <charles.lehner@spruceid.com>"]
 edition = "2018"
 
 [dependencies]
-ssi = { path = "../" }
+ssi = { path = "../", default-features = false }
 async-trait = "0.1"
 hyper = { version = "0.14", features = ["server", "client", "http1", "stream"] }
 hyper-tls = "0.5"
