--- a/Cargo.toml
+++ b/Cargo.toml
@@ -42,6 +42,8 @@ percent-encoding = { version = "2.1", optional = true }
 tokio = { version = "1.0", optional = true, features = ["macros"] }
 blake2b_simd = "0.5"
 bs58 = { version = "0.4", features = ["check"] }
+libsecp256k1 = { version = "0.3", optional = true }
+thiserror = "1.0"
 
 [workspace]
 members = [
