--- a/did-key/Cargo.toml
+++ b/did-key/Cargo.toml
@@ -4,11 +4,15 @@ version = "0.1.0"
 authors = ["Charles E. Lehner <charles.lehner@spruceid.com>"]
 edition = "2018"
 
+[features]
+secp256k1 = ["libsecp256k1", "ssi/libsecp256k1", "ssi/rand"]
+
 [dependencies]
 ssi = { path = "../", default-features = false }
 async-trait = "0.1"
 thiserror = "1.0"
 multibase = "0.8"
+libsecp256k1 = { version = "0.3", optional = true }
 
 [dev-dependencies]
 serde = { version = "1.0", features = ["derive"] }
