--- a/did-tezos/Cargo.toml
+++ b/did-tezos/Cargo.toml
@@ -4,7 +4,8 @@ version = "0.1.0"
 authors = ["Simon Bihel <simon.bihel@spruceid.com>"]
 edition = "2018"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[features]
+secp256k1 = ["libsecp256k1", "ssi/libsecp256k1", "ssi/rand"]
 
 [dependencies]
 ssi = { path = "../", default-features = false }
@@ -13,3 +14,4 @@ tokio = { version = "1.0", features = ["macros", "rt"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 async-trait = "0.1"
+libsecp256k1 = { version = "0.3", optional = true }
