--- a/did-tezos/Cargo.toml
+++ b/did-tezos/Cargo.toml
@@ -5,7 +5,7 @@ authors = ["Simon Bihel <simon.bihel@spruceid.com>"]
 edition = "2018"
 
 [features]
-secp256k1 = ["libsecp256k1", "ssi/libsecp256k1", "ssi/rand"]
+secp256k1 = ["libsecp256k1", "ssi/secp256k1", "ssi/rand"]
 
 [dependencies]
 ssi = { path = "../", default-features = false }
