--- a/Cargo.toml
+++ b/Cargo.toml
@@ -38,6 +38,7 @@ sha2 = { version = "0.9", optional = true }
 hyper = { version = "0.14", optional = true, features = ["server", "client", "http1", "stream"] }
 hyper-tls = { version = "0.5", optional = true }
 http = { version = "0.2", optional = true }
+hex = "0.4"
 serde_urlencoded = "0.7"
 percent-encoding = { version = "2.1", optional = true }
 tokio = { version = "1.0", optional = true, features = ["macros"] }
