--- a/did-tezos/Cargo.toml
+++ b/did-tezos/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2018"
 default = ["ssi/ring"]
 dalek = ["ssi/ed25519-dalek", "ssi/rand", "ssi/sha2"]
 secp256k1 = ["libsecp256k1", "ssi/secp256k1", "ssi/rand"]
+p256 = ["ssi/p256"]
 
 [dependencies]
 ssi = { path = "../", default-features = false }
