--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -44,6 +44,12 @@ jobs:
         cargo test --verbose --manifest-path did-key/Cargo.toml --features secp256k1,ssi/ring
         cargo test --verbose --manifest-path did-tezos/Cargo.toml --features secp256k1,ssi/ring
 
+    - name: Test with p256
+      run: |
+        cargo test --verbose --workspace --features p256
+        cargo test --verbose --manifest-path did-key/Cargo.toml --features p256,ssi/p256,ssi/ring,ssi/rand
+        cargo test --verbose --manifest-path did-tezos/Cargo.toml --features p256,ssi/p256,ssi/ring,ssi/rand
+
     - name: Test DID Resolution HTTP(S) Binding
       run: cargo test --features http-did
 
