--- a/Cargo.toml
+++ b/Cargo.toml
@@ -47,6 +47,8 @@ bs58 = { version = "0.4", features = ["check"] }
 libsecp256k1 = { version = "0.3", optional = true }
 thiserror = "1.0"
 keccak-hash = { version = "0.7", optional = true }
+p256 = { version = "0.7", optional = true, features = ["zeroize", "ecdsa"] }
+signature = { version = ">= 1.2.2, < 1.3.0" } # match ecdsa 0.10.2
 
 [workspace]
 members = [
