--- a/did-tezos/Cargo.toml
+++ b/did-tezos/Cargo.toml
@@ -5,13 +5,22 @@ authors = ["Simon Bihel <simon.bihel@spruceid.com>"]
 edition = "2018"
 
 [features]
+default = ["ssi/ring"]
+dalek = ["ssi/ed25519-dalek", "ssi/rand", "ssi/sha2"]
 secp256k1 = ["libsecp256k1", "ssi/secp256k1", "ssi/rand"]
 
 [dependencies]
 ssi = { path = "../", default-features = false }
-chrono = { version = "0.4", features = ["serde"] }
+chrono = { version = "0.4" }
 tokio = { version = "1.0", features = ["macros", "rt"] }
+reqwest = { version = "0.11", features = ["json", "default-tls"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 async-trait = "0.1"
 libsecp256k1 = { version = "0.3", optional = true }
+anyhow = "1.0.33"
+json-patch = "0.2.6"
+bs58 = { version = "0.4", features = ["check"] }
+
+[dev-dependencies]
+tezedge_client = { git = "https://github.com/binier/tezedge-client", rev = "672e61297f0ba7d1d94168a2588b9b27d76c1fc4", package = "lib" }
