--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -65,3 +65,8 @@ jobs:
         npm i
         cp ../vc-test/config.json .
         npm test
+
+    - name: Test WASM compilation
+      run: |
+        rustup target add wasm32-unknown-unknown
+        cargo check --workspace --target wasm32-unknown-unknown
