--- a/did-ethr/Cargo.toml
+++ b/did-ethr/Cargo.toml
@@ -7,9 +7,11 @@ edition = "2018"
 [dependencies]
 ssi = { path = "../", default-features = false, features = ["secp256k1", "keccak-hash"] }
 chrono = { version = "0.4", features = ["serde"] }
-tokio = { version = "1.0", features = ["macros", "rt"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 async-trait = "0.1"
 libsecp256k1 = { version = "0.3" }
 keccak-hash = "0.7"
+
+[dev-dependencies]
+tokio = { version = "1.0", features = ["macros"] }
