--- a/did-sol/Cargo.toml
+++ b/did-sol/Cargo.toml
@@ -7,8 +7,10 @@ edition = "2018"
 [dependencies]
 ssi = { path = "../", default-features = false, features = [] }
 chrono = { version = "0.4", features = ["serde"] }
-tokio = { version = "1.0", features = ["macros", "rt"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 async-trait = "0.1"
 bs58 = { version = "0.4", features = ["check"] }
+
+[dev-dependencies]
+tokio = { version = "1.0", features = ["macros"] }
