--- a/did-web/Cargo.toml
+++ b/did-web/Cargo.toml
@@ -7,13 +7,16 @@ edition = "2018"
 [dependencies]
 ssi = { path = "../", default-features = false }
 async-trait = "0.1"
-hyper = { version = "0.14", features = ["server", "client", "http1", "stream"] }
-hyper-tls = "0.5"
+reqwest = { version = "0.11", features = ["json"] }
 http = "0.2"
 serde_json = "1.0"
-tokio = { version = "1.0", features = ["macros"] }
-futures = "0.3"
+
+[target.'cfg(target_os = "android")'.dependencies.reqwest]
+features = ["native-tls-vendored"]
 
 [dev-dependencies]
+tokio = { version = "1.0", features = ["macros"] }
 serde = { version = "1.0", features = ["derive"] }
 async-std = { version = "1.9", features = ["attributes"] }
+futures = "0.3"
+hyper = { version = "0.14", features = ["server", "client", "http1", "stream"] }
