--- a/Cargo.toml
+++ b/Cargo.toml
@@ -48,6 +48,7 @@ keccak-hash = { version = "0.7", optional = true }
 p256 = { version = "0.7", optional = true, features = ["zeroize", "ecdsa"] }
 signature = { version = ">= 1.2.2, < 1.3.0" } # match ecdsa 0.10.2
 ssi-contexts = { path = "contexts/" }
+ripemd160 = { version = "0.9", optional = true }
 
 # dependencies for json-ld
 log = "^0.4"
@@ -66,6 +67,7 @@ members = [
   "did-web",
   "did-ethr",
   "did-sol",
+  "did-pkh",
   "vc-test",
 ]
 
