--- a/did-tezos/Cargo.toml
+++ b/did-tezos/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "did-tezos"
 version = "0.1.0"
-authors = ["Simon Bihel <simon.bihel@spruceid.com>"]
+authors = ["Spruce Systems, Inc."]
 edition = "2018"
 
 [features]
