--- a/did-key/Cargo.toml
+++ b/did-key/Cargo.toml
@@ -3,13 +3,20 @@ name = "did-method-key"
 version = "0.1.0"
 authors = ["Spruce Systems, Inc."]
 edition = "2018"
+license = "Apache-2.0"
+keywords = ["ssi", "did", "ethereum"]
+categories = ["cryptography::cryptocurrencies"]
+description = "did:key DID method, using the ssi crate"
+repository = "https://github.com/spruceid/ssi/"
+homepage = "https://github.com/spruceid/ssi/tree/main/did-ethr/"
+documentation = "https://docs.rs/did-ethr/"
 
 [features]
 secp256k1 = ["libsecp256k1", "ssi/secp256k1", "ssi/rand"]
 p256 = ["ssi/p256"]
 
 [dependencies]
-ssi = { path = "../", default-features = false }
+ssi = { version = "0.2", path = "../", default-features = false }
 async-trait = "0.1"
 thiserror = "1.0"
 multibase = "0.8"
