--- a/did-tezos/Cargo.toml
+++ b/did-tezos/Cargo.toml
@@ -3,6 +3,13 @@ name = "did-tz"
 version = "0.1.0"
 authors = ["Spruce Systems, Inc."]
 edition = "2018"
+license = "Apache-2.0"
+keywords = ["ssi", "did", "tezos"]
+categories = ["cryptography::cryptocurrencies"]
+description = "did:tz Tezos DID method, using the ssi crate"
+repository = "https://github.com/spruceid/ssi/"
+homepage = "https://github.com/spruceid/ssi/tree/main/did-tezos/"
+documentation = "https://docs.rs/did-tezos/"
 
 [features]
 default = ["ssi/ring"]
@@ -11,7 +18,7 @@ secp256k1 = ["libsecp256k1", "ssi/secp256k1", "ssi/rand"]
 p256 = ["ssi/p256"]
 
 [dependencies]
-ssi = { path = "../", default-features = false }
+ssi = { version = "0.2", path = "../", default-features = false }
 chrono = { version = "0.4" }
 reqwest = { version = "0.11", features = ["json"] }
 serde = { version = "1.0", features = ["derive"] }
