--- a/did-web/Cargo.toml
+++ b/did-web/Cargo.toml
@@ -3,9 +3,16 @@ name = "did-web"
 version = "0.1.0"
 authors = ["Spruce Systems, Inc."]
 edition = "2018"
+license = "Apache-2.0"
+keywords = ["ssi", "did"]
+categories = ["web-programming::http-client"]
+description = "did:web DID method, using the ssi crate"
+repository = "https://github.com/spruceid/ssi/"
+homepage = "https://github.com/spruceid/ssi/tree/main/did-web/"
+documentation = "https://docs.rs/did-web/"
 
 [dependencies]
-ssi = { path = "../", default-features = false }
+ssi = { version = "0.2", path = "../", default-features = false }
 async-trait = "0.1"
 reqwest = { version = "0.11", features = ["json"] }
 http = "0.2"
