--- a/vc-test/Cargo.toml
+++ b/vc-test/Cargo.toml
@@ -3,8 +3,11 @@ name = "ssi-vc-test"
 version = "0.1.0"
 authors = ["Spruce Systems, Inc."]
 edition = "2018"
+license = "Apache-2.0"
+description = "vc-test-suite test driver for ssi"
+publish = false
 
 [dependencies]
-ssi = { path = "../" }
+ssi = { version = "0.2", path = "../" }
 serde_json = "1.0"
 base64 = "0.12"
