Fix DID methods keywords and link

--- a/did-pkh/Cargo.toml
+++ b/did-pkh/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.0.1"
 authors = ["Spruce Systems, Inc."]
 edition = "2018"
 license = "Apache-2.0"
-keywords = ["ssi", "did", "tor"]
+keywords = ["ssi", "did"]
 categories = ["cryptography"]
 description = "did:pkh DID method, using the ssi crate"
 repository = "https://github.com/spruceid/ssi/"
