--- a/did-key/Cargo.toml
+++ b/did-key/Cargo.toml
@@ -4,12 +4,12 @@ version = "0.1.0"
 authors = ["Spruce Systems, Inc."]
 edition = "2018"
 license = "Apache-2.0"
-keywords = ["ssi", "did", "ethereum"]
+keywords = ["ssi", "did"]
 categories = ["cryptography::cryptocurrencies"]
 description = "did:key DID method, using the ssi crate"
 repository = "https://github.com/spruceid/ssi/"
-homepage = "https://github.com/spruceid/ssi/tree/main/did-ethr/"
-documentation = "https://docs.rs/did-ethr/"
+homepage = "https://github.com/spruceid/ssi/tree/main/did-key/"
+documentation = "https://docs.rs/did-key/"
 
 [features]
 secp256k1 = ["libsecp256k1", "ssi/secp256k1", "ssi/rand"]
