--- a/did-key/Cargo.toml
+++ b/did-key/Cargo.toml
@@ -12,15 +12,16 @@ homepage = "https://github.com/spruceid/ssi/tree/main/did-key/"
 documentation = "https://docs.rs/did-key/"
 
 [features]
-secp256k1 = ["libsecp256k1", "ssi/secp256k1", "ssi/rand"]
-p256 = ["ssi/p256"]
+secp256k1 = ["k256", "ssi/secp256k1"]
+secp256r1 = ["ssi/secp256r1"]
+p256 = ["secp256r1"] # for backward compatibility
 
 [dependencies]
 ssi = { version = "0.2", path = "../", default-features = false }
 async-trait = "0.1"
 thiserror = "1.0"
 multibase = "0.8"
-libsecp256k1 = { version = "0.3", optional = true }
+k256 = { version = "0.7", optional = true, features = ["zeroize", "ecdsa"] }
 
 [dev-dependencies]
 serde = { version = "1.0", features = ["derive"] }
