--- a/did-key/Cargo.toml
+++ b/did-key/Cargo.toml
@@ -22,6 +22,7 @@ thiserror = "1.0"
 multibase = "0.8"
 k256 = { version = "0.8", optional = true, features = ["zeroize", "ecdsa"] }
 p256 = { version = "0.8", optional = true, features = ["zeroize", "ecdsa"] }
+serde_json = "1.0"
 
 [dev-dependencies]
 serde = { version = "1.0", features = ["derive"] }
