Add p256 dependency to did-key
for key compression

--- a/did-key/Cargo.toml
+++ b/did-key/Cargo.toml
@@ -13,8 +13,7 @@ documentation = "https://docs.rs/did-key/"
 
 [features]
 secp256k1 = ["k256", "ssi/secp256k1"]
-secp256r1 = ["ssi/secp256r1"]
-p256 = ["secp256r1"] # for backward compatibility
+secp256r1 = ["p256", "ssi/secp256r1"]
 
 [dependencies]
 ssi = { version = "0.2", path = "../", default-features = false }
@@ -22,6 +21,7 @@ async-trait = "0.1"
 thiserror = "1.0"
 multibase = "0.8"
 k256 = { version = "0.8", optional = true, features = ["zeroize", "ecdsa"] }
+p256 = { version = "0.8", optional = true, features = ["zeroize", "ecdsa"] }
 
 [dev-dependencies]
 serde = { version = "1.0", features = ["derive"] }
