--- a/vc-test/Cargo.toml
+++ b/vc-test/Cargo.toml
@@ -9,5 +9,6 @@ publish = false
 
 [dependencies]
 ssi = { version = "0.2", path = "../" }
+async-std = { version = "1.9", features = ["attributes"] }
 serde_json = "1.0"
 base64 = "0.12"
