--- a/did-tezos/Cargo.toml
+++ b/did-tezos/Cargo.toml
@@ -14,7 +14,7 @@ documentation = "https://docs.rs/did-tezos/"
 [features]
 default = ["ssi/ring"]
 dalek = ["ssi/ed25519-dalek", "ssi/rand", "ssi/sha2"]
-secp256k1 = ["libsecp256k1", "ssi/secp256k1", "ssi/rand"]
+secp256k1 = ["ssi/secp256k1", "ssi/rand"]
 secp256r1 = ["ssi/secp256r1"]
 p256 = ["secp256r1"]
 
@@ -25,7 +25,6 @@ reqwest = { version = "0.11", features = ["json"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 async-trait = "0.1"
-libsecp256k1 = { version = "0.3", optional = true }
 anyhow = "1.0.33"
 json-patch = "0.2.6"
 bs58 = { version = "0.4", features = ["check"] }
