--- a/Cargo.toml
+++ b/Cargo.toml
@@ -67,6 +67,9 @@ p256 = { version = "0.8", optional = true, features = ["zeroize", "ecdsa"] }
 ssi-contexts = { version = "0.1.0", path = "contexts/" }
 ripemd160 = { version = "0.9", optional = true }
 sshkeys = "0.3"
+reqwest = { version = "0.11", features = ["json"] }
+flate2 = "1.0"
+bitvec = "0.20"
 
 # dependencies for json-ld
 log = "^0.4"
@@ -75,7 +78,6 @@ mown = "^0.2"
 #iref = "^1.4.3"
 #futures = "^0.3"
 once_cell = "^1.4"
-reqwest = { version = "^0.10", optional = true }
 langtag = "^0.2"
 
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
