--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,6 +25,11 @@ keccak = ["keccak-hash", "secp256k1", "k256/keccak256"]
 sha = ["sha2", "k256/sha256"]
 
 [dependencies]
+bbs = "0.4.1"
+pairing-plus = "0.19"
+ff = { version = "0.6", package = "ff-zeroize" }
+hkdf = "0.8"
+zeroize = { version = "1.4", features = ["zeroize_derive"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 serde_jcs = "0.1"
@@ -48,6 +53,7 @@ iref = "1.4"
 lazy_static = "1.4"
 combination = "0.1"
 sha2 = { version = "0.9", optional = true }
+sha2_old = { package = "sha2", version = "0.8" }
 hyper = { version = "0.14", optional = true, features = ["server", "client", "http1", "stream"] }
 hyper-tls = { version = "0.5", optional = true }
 http = { version = "0.2", optional = true }
