--- a/did-ethr/Cargo.toml
+++ b/did-ethr/Cargo.toml
@@ -17,6 +17,7 @@ chrono = { version = "0.4", features = ["serde"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 async-trait = "0.1"
+hex = "0.4"
 
 [dev-dependencies]
 tokio = { version = "1.0", features = ["macros"] }
