--- a/vc-test/Cargo.toml
+++ b/vc-test/Cargo.toml
@@ -8,7 +8,7 @@ description = "vc-test-suite test driver for ssi"
 publish = false
 
 [dependencies]
-ssi = { version = "0.3", path = "../" }
+ssi = { version = "0.3", path = "../", features = ["example-http-issuer"] }
 async-std = { version = "1.9", features = ["attributes"] }
 serde_json = "1.0"
 base64 = "0.12"
