Implement did:webkey:gpg (#373)
Parse OpenPGP keys to DID documents

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,6 +18,11 @@ jobs:
       with:
         submodules: true
 
+    - name: Install additional build dependencies
+      run: |
+        sudo apt-get update
+        sudo apt-get install nettle-dev capnproto
+
     - name: Cache Cargo registry and build artifacts
       uses: actions/cache@v2
       with:
