--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,16 +7,14 @@ license = "Apache-2.0"
 description = "Core library for Verifiable Credentials and Decentralized Identifiers."
 repository = "https://github.com/spruceid/ssi/"
 documentation = "https://docs.rs/ssi/"
+resolver = "2"
 
-exclude = [
-  "json-ld-api/*",
-  "json-ld-normalization/*",
-]
+exclude = ["json-ld-api/*", "json-ld-normalization/*"]
 
 [features]
 default = ["ring"]
 http-did = ["hyper", "hyper-tls", "http", "percent-encoding", "tokio"]
-libsecp256k1 = ["secp256k1"] # backward compatibility
+libsecp256k1 = ["secp256k1"]                                           # backward compatibility
 secp256k1 = ["k256", "rand", "k256/keccak256"]
 secp256r1 = ["p256", "rand"]
 ripemd-160 = ["ripemd160", "secp256k1"]
@@ -58,7 +56,12 @@ lazy_static = "1.4"
 combination = "0.1"
 sha2 = { version = "0.9", optional = true }
 sha2_old = { package = "sha2", version = "0.8" }
-hyper = { version = "0.14", optional = true, features = ["server", "client", "http1", "stream"] }
+hyper = { version = "0.14", optional = true, features = [
+  "server",
+  "client",
+  "http1",
+  "stream",
+] }
 hyper-tls = { version = "0.5", optional = true }
 http = { version = "0.2", optional = true }
 hex = "0.4"
@@ -106,7 +109,7 @@ members = [
 ]
 
 [dev-dependencies]
-blake2 = "0.8" # for bbs doctest
+blake2 = "0.8"                                         # for bbs doctest
 uuid = { version = "0.8", features = ["v4", "serde"] }
 difference = "2.0"
 did-method-key = { path = "./did-key" }
