--- a/did-webkey/Cargo.toml
+++ b/did-webkey/Cargo.toml
@@ -12,23 +12,48 @@ homepage = "https://github.com/spruceid/ssi/tree/main/did-webkey/"
 documentation = "https://docs.rs/did-webkey/"
 
 [features]
+default = ["ssi/ring", "crypto-nettle"]
+crypto-cng = ["sequoia-openpgp/crypto-cng"]
+crypto-nettle = ["sequoia-openpgp/crypto-nettle"]
 p256 = ["ssi/p256"]
 
 [dependencies]
-ssi = { version = "0.3", path = "../", default-features = false }
-async-trait = "0.1"
-reqwest = { version = "0.11", features = ["json"] }
-http = "0.2"
-serde_json = "1.0"
-serde = { version = "1.0", features = ["derive"] }
-sshkeys = "0.3"
+ssi = { version = "0.3", path = "../", default-features = false, features = [
+    "secp256r1",
+] }
+anyhow = "1.0.52"
+async-trait = "0.1.52"
+reqwest = { version = "0.11.9", features = ["json"] }
+hex = "0.4.3"
+http = "0.2.6"
+serde_json = "1.0.75"
+serde = { version = "1.0.134", features = ["derive"] }
+sshkeys = "0.3.1"
+
+[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
+sequoia-openpgp = { version = "1.7.0", features = [
+    "compression-deflate",
+], default-features = false, optional = true }
+
+[target.'cfg(target_arch = "wasm32")'.dependencies]
+sequoia-openpgp = { version = "1.7.0", default-features = false, features = [
+    "crypto-rust",
+    "allow-experimental-crypto",
+    "allow-variable-time-crypto",
+] }
+
 
 [target.'cfg(target_os = "android")'.dependencies.reqwest]
-version = "0.11"
+version = "0.11.9"
 features = ["json", "native-tls-vendored"]
 
 [dev-dependencies]
-tokio = { version = "1.0", features = ["macros"] }
-async-std = { version = "1.9", features = ["attributes"] }
-futures = "0.3"
-hyper = { version = "0.14", features = ["server", "client", "http1", "stream"] }
+tokio = { version = "1.15.0", features = ["macros"] }
+async-std = { version = "1.10.0", features = ["attributes"] }
+futures = "0.3.19"
+hyper = { version = "0.14.16", features = [
+    "server",
+    "client",
+    "http1",
+    "stream",
+] }
