Update contexts and add zCap v1 context file (#419)
- Add zCap v1 context
- Update ssi-contexts license for zCap context
- Update schema.org and Traceability contexts
- Fix link to Universal Wallet 2020

--- a/contexts/Cargo.toml
+++ b/contexts/Cargo.toml
@@ -3,7 +3,7 @@ name = "ssi-contexts"
 version = "0.1.3"
 authors = ["Spruce Systems, Inc."]
 edition = "2018"
-license = "Apache-2.0 AND W3C-20150513 AND CC-BY-SA-3.0"
+license = "Apache-2.0 AND W3C-20150513 AND CC-BY-SA-3.0 AND BSD-3-Clause"
 license-file = "LICENSES.md"
 description = "JSON-LD context files related to Verifiable Credentials, Decentralized Identifiers, and Linked Data Proofs"
 repository = "https://github.com/spruceid/ssi/"
