Implement ES384 sign/verify with openssl
- Add P-384 key generation, parsing, serialization, and
  conversion to/from openssl types.
- Add P-384 private key test vector.
- Enable P-384 for did:key DID generation and resolution.
- Add and test ES384 JWS signing and verification.
- Default P-384 keys to use ES384 JWS algorithm.
- Enable ES384 for JsonWebSignature2020.
- Add test with openssl to CI.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -37,6 +37,9 @@ jobs:
     - name: Test with alternative crypto libraries
       run: cargo test --no-default-features --features rsa,ed25519-dalek,sha2,rand
 
+    - name: Test with openssl
+      run: cargo test --no-default-features --features=ring,openssl
+
     - name: Test with secp256k1
       run: |
         cargo test --verbose --workspace --features secp256k1
