--- a/Cargo.toml
+++ b/Cargo.toml
@@ -45,6 +45,7 @@ rsa = { version = "0.3", optional = true }
 ed25519-dalek = { version = "1", optional = true }
 rand = { version = "0.8", optional = true }
 rand_old = { package = "rand", version = "0.7" }
+openssl = { version = "0.10", optional = true }
 multibase = "0.8"
 simple_asn1 = "^0.5.2"
 num-bigint = "0.4"
