Address Clippy warnings and add to CI (#456)
Also adds cargo fmt to the CI.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -31,6 +31,12 @@ jobs:
     - name: Build
       run: cargo build --verbose --workspace
 
+    - name: Fmt
+      run: cargo fmt -- --check
+
+    - name: Clippy
+      run: cargo clippy --workspace
+
     - name: Test
       run: cargo test --verbose --workspace
 
