--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -35,7 +35,7 @@ jobs:
       run: cargo fmt -- --check
 
     - name: Clippy
-      run: cargo clippy --workspace
+      run: RUSTFLAGS="-Dwarnings" cargo clippy --workspace
 
     - name: Test
       run: cargo test --verbose --workspace
