--- a/did-key/Cargo.toml
+++ b/did-key/Cargo.toml
@@ -27,8 +27,8 @@ ssi-crypto = { path = "../ssi-crypto", default-features = false, version = "0.1"
 async-trait = "0.1"
 thiserror = "1.0"
 multibase = "0.8"
-k256 = { version = "0.9.6", optional = true, features = ["zeroize", "ecdsa"] }
-p256 = { version = "0.9.0", optional = true, features = ["zeroize", "ecdsa"] }
+k256 = { version = "0.11", optional = true, features = ["ecdsa"] }
+p256 = { version = "0.11", optional = true, features = ["ecdsa"] }
 serde_json = "1.0"
 simple_asn1 = "^0.5.2"
 
