--- a/did-webkey/Cargo.toml
+++ b/did-webkey/Cargo.toml
@@ -20,7 +20,7 @@ openssl = ["ssi-dids/openssl"]
 
 [dependencies]
 ssi-dids = { version = "0.1", path = "../ssi-dids", default-features = false, features = ["http"] }
-ssi-ssh = { version = "0.1", path = "../ssi-ssh", default-features = false }
+ssi-ssh = { version = "0.1", path = "../ssi-ssh" }
 anyhow = "1.0.52"
 async-trait = "0.1.52"
 reqwest = { version = "0.11.9", features = ["json"] }
@@ -29,13 +29,7 @@ http = "0.2.6"
 serde_json = "1.0.75"
 serde = { version = "1.0.134", features = ["derive"] }
 sshkeys = "0.3.1"
-
-sequoia-openpgp = { version = "1.7.0", default-features = false, features = [
-    "compression-deflate",
-    "crypto-rust",
-    "allow-experimental-crypto",
-    "allow-variable-time-crypto",
-] }
+pgp = "0.8.0"
 
 
 [target.'cfg(target_os = "android")'.dependencies.reqwest]
@@ -43,6 +37,9 @@ version = "0.11.9"
 features = ["json", "native-tls-vendored"]
 
 [dev-dependencies]
+env_logger = "*"
+test-log = "0.2.11"
+pretty_assertions = "1.3"
 tokio = { version = "1.15.0", features = ["macros"] }
 async-std = { version = "1.10.0", features = ["attributes"] }
 futures = "0.3.19"
