--- a/ssi-crypto/Cargo.toml
+++ b/ssi-crypto/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 [features]
 default = ["secp256k1", "ripemd-160"]
 secp256k1 = ["k256", "k256/keccak256", "keccak"]
-bbs = ["dep:bbs", "pairing-plus"]
+bbs = ["dep:bbs", "pairing-plus", "rand_old", "sha2_old", "hkdf"]
 ripemd-160 = ["ripemd160", "secp256k1", "bs58"]
 keccak = ["keccak-hash"]
 ring = ["dep:ring"]
@@ -17,15 +17,18 @@ ring = ["dep:ring"]
 thiserror = "1.0"
 sha2 = { version = "0.10" }
 ring = { version = "0.16", optional = true }
-k256 = { version = "0.9.6", optional = true, features = ["zeroize", "ecdsa"] }
+k256 = { version = "0.11", optional = true, features = ["ecdsa"] }
+p256 = { version = "0.11", optional = true, features = ["ecdsa"] }
+hkdf = { version = "0.8", optional = true }
+rand_old = { package = "rand", version = "0.7", optional = true }
+sha2_old = { package = "sha2", version = "0.8", optional = true }
 keccak-hash = { version = "0.7", optional = true }
-p256 = { version = "0.9.0", optional = true, features = ["zeroize", "ecdsa"] }
 ed25519-dalek = { version = "1", optional = true }
 ripemd160 = { version = "0.9", optional = true }
 bbs = { version = "=0.4.1", optional = true }
 pairing-plus = { version = "=0.19.0", optional = true }
 serde = { version = "1.0", features = ["derive"] }
-zeroize = { version = "1.4", features = ["zeroize_derive"] }
+zeroize = { version = "1.5", features = ["zeroize_derive"] }
 bs58 = { version = "0.4", features = ["check"], optional = true }
 digest = "0.9"
 
