--- a/ssi-jws/Cargo.toml
+++ b/ssi-jws/Cargo.toml
@@ -5,43 +5,42 @@ edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 [features]
-default = ["secp256k1", "secp256r1", "ed25519", "rsa", "eip", "ssi-jwk/ripemd-160", "blake2b_simd"]
+default = ["secp256k1", "secp256r1", "ed25519", "rsa", "eip", "ssi-jwk/ripemd-160"]
 ## enable secp256k1 signatures
-secp256k1 = ["ssi-jwk/secp256k1", "k256/keccak256", "ssi-crypto/secp256k1"]
+secp256k1 = ["ssi-jwk/secp256k1", "k256/keccak256", "ssi-crypto/secp256k1", "blake2", "dep:sha2"]
 ## enable secp256r1 (p256) signatures
-secp256r1 = ["ssi-jwk/secp256r1", "p256"]
+secp256r1 = ["ssi-jwk/secp256r1", "p256", "blake2"]
 ## enable ed25519 (EdDSA) signatures
-ed25519 = ["ssi-jwk/ed25519", "ed25519-dalek", "rand_old"]
+ed25519 = ["ssi-jwk/ed25519", "ed25519-dalek", "rand", "blake2"]
 ## enable RSA signatures
-rsa = ["ssi-jwk/rsa", "dep:rsa", "dep:sha2"]
+rsa = ["ssi-jwk/rsa", "dep:rsa", "dep:sha2", "rand"]
 ## enable aleo ecosystem signatures
 aleo = ["ssi-jwk/aleo"]
 ## enable ethereum style signatures
-eip = ["ssi-jwk/eip", "ssi-crypto/keccak", "k256/keccak256"]
+eip = ["ssi-jwk/eip", "ssi-crypto/keccak", "k256/keccak256", "secp256k1"]
 ## enable tezos style signatures
-tezos = ["ssi-jwk/tezos", "blake2b_simd", "secp256k1", "secp256r1"]
+tezos = ["ssi-jwk/tezos", "secp256k1", "secp256r1"]
 
 ## Use the Ring crate for crypto operations
 openssl = ["ssi-jwk/openssl", "dep:openssl"]
 ## Use the OpenSSL crate for crypto operations
-ring = ["ssi-jwk/ring", "dep:ring", "rand"]
+ring = ["ssi-jwk/ring", "dep:ring", "rand", "blake2"]
 
 [dependencies]
 thiserror = "1.0"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 base64 = "0.12"
-k256 = { version = "0.9", optional = true, features = ["zeroize", "ecdsa"] }
-p256 = { version = "0.9", optional = true, features = ["zeroize", "ecdsa"] }
-blake2b_simd = { version = "0.5", optional = true }
+k256 = { version = "0.11", optional = true, features = ["ecdsa"] }
+p256 = { version = "0.11", optional = true, features = ["ecdsa"] }
+# blake2b_simd = { version = "0.5", optional = true }
+blake2 = { version = "0.10", optional = true }
 ed25519-dalek = { version = "1", optional = true }
-sha2 = { version = "0.9", optional = true }
-rsa = { version = "0.3", optional = true }
-rand_old = { package = "rand", version = "0.7", optional = true }
+sha2 = { version = "0.10", optional = true }
+rsa = { version = "0.6", optional = true }
 rand = { version = "0.8", optional = true }
 openssl = { version = "0.10", optional = true }
 ring = { version = "0.16", optional = true }
-ssi-core = { path = "../ssi-core", version = "0.1"}
 ssi-crypto = { path = "../ssi-crypto", version = "0.1"}
 ssi-jwk = { path = "../ssi-jwk", version = "0.1"}
 
