--- a/ssi-ldp/Cargo.toml
+++ b/ssi-ldp/Cargo.toml
@@ -9,23 +9,23 @@ edition = "2021"
 default = ["eip", "tezos", "w3c", "solana"]
 ## enable LDPs from the W3C linked data proof registry: ed25519, secp256k1, rsa2018, secp256r1
 w3c = ["secp256k1", "secp256r1", "rsa", "ed25519"]
-secp256k1 = ["ssi-jwt/secp256k1", "k256"]
-secp256r1 = ["ssi-jwt/secp256r1", "p256"]
-ed25519 = ["ssi-jwt/ed25519"]
-rsa = ["ssi-jwt/rsa"]
+secp256k1 = ["ssi-jws/secp256k1", "k256"]
+secp256r1 = ["ssi-jws/secp256r1", "p256"]
+ed25519 = ["ssi-jws/ed25519"]
+rsa = ["ssi-jws/rsa"]
 ## enable the EIP-defined LDPs: EIP712
-eip = ["keccak-hash", "ssi-caips/eip", "k256", "ssi-jwt/eip"]
+eip = ["keccak-hash", "ssi-caips/eip", "k256", "ssi-jws/eip"]
 ## enable LDPs from the Tezos Ecosystem
-tezos = ["ssi-tzkey", "ssi-jwt/tezos", "ssi-caips/tezos"]
+tezos = ["ssi-tzkey", "ssi-jws/tezos", "ssi-caips/tezos"]
 ## enable LDPs from the Aleo Ecosystem
-aleo = ["ssi-jwt/aleo", "ssi-caips/aleo"]
+aleo = ["ssi-jws/aleo", "ssi-caips/aleo"]
 ## enable LDPs from the Solana Ecosystem
 solana = []
 
 ## Use the Ring crate for crypto operations
-ring = ["ssi-jwt/ring"]
+ring = ["ssi-jws/ring"]
 ## Use the OpenSSL crate for crypto operations and P384
-openssl = ["ssi-jwt/openssl"]
+openssl = ["ssi-jws/openssl"]
 
 example-http-issuer = []
 
@@ -39,8 +39,8 @@ serde_json = "1.0"
 serde_jcs = "0.1"
 hex = "0.4"
 multibase = "0.8"
-k256 = { version = "0.9", optional = true, features = ["zeroize", "ecdsa"] }
-p256 = { version = "0.9", optional = true, features = ["zeroize", "ecdsa"] }
+k256 = { version = "0.11", optional = true, features = ["ecdsa"] }
+p256 = { version = "0.11", optional = true, features = ["ecdsa"] }
 keccak-hash = { version = "0.7", optional = true }
 ssi-jwk = { path = "../ssi-jwk", version = "0.1"}
 ssi-json-ld = { path = "../ssi-json-ld", version = "0.1"}
@@ -48,7 +48,6 @@ ssi-core = { path = "../ssi-core", version = "0.1"}
 ssi-dids = { path = "../ssi-dids", version = "0.1"}
 ssi-crypto = { path = "../ssi-crypto", version = "0.1"}
 ssi-jws = { path = "../ssi-jws", version = "0.1"}
-ssi-jwt = { path = "../ssi-jwt", version = "0.1"}
 ssi-tzkey = { path = "../ssi-tzkey", version = "0.1", optional = true}
 ssi-caips = { path = "../ssi-caips", version = "0.1" }
 ssi-contexts = { version = "0.1.3", path = "../contexts" }
